Melhorias na pagina Galeria

--- a/galeria.html
+++ b/galeria.html
@@ -13,7 +13,7 @@
     <header class="header">  
     <div class="logo">
             <a id="logo" href="/"  > 
-                <img src="imagens/Vector.png" >           
+                <img src="imagens/Vector.png" alt="Logotipo do Luvre" >           
             </a>                      
         </div>      
         <h1>Luvre</h1>
@@ -44,7 +44,7 @@
             
                     <h3>Artista: Gabriella lopez</h3>
                     <h2>Lua roxa </h2> 
-                <p>Nessa obra, a artista colocou todo seu talento mais uma vez em uma linda pintura digna de museus internacionais, porem, humilde, publicou a imagem gratuitamente para que seus fans possam usufruir ao redor de todo o mundo</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro, adipisci ea consequuntur hic alias enim accusamus labore accusantium nemo, voluptas voluptatum placeat! Aperiam tempore possimus harum consequuntur, nihil illo debitis.</p>
                 
                 <a href="/"><i class="fa-brands fa-youtube"></i> GabiArtes!</a> 
                 <br> 
