Adicionada uma barra inferior, e mudanças simples no tamanho da imagem

--- a/galeria.html
+++ b/galeria.html
@@ -51,7 +51,9 @@
                 <a href="/"><i class="fa-brands fa-instagram"></i> @GabixLopez</a>
         </section>
     </main>
-
+<footer>
+    <p> Site ainda em desenvolvimento</p>
+</footer>
 
     
 </body>
